--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transform-origin: top;
+            animation: openEnvelope 2s forwards;
         }
         .flap {
             position: absolute;
@@ -36,11 +38,11 @@
             height: 100%;
             background: #fff;
             transform-origin: top;
-            animation: openFlap 2s forwards;
+            animation: openFlap 2s forwards 2s;
         }
         .letter {
             opacity: 0;
-            transition: opacity 2s;
+            transition: opacity 2s 2s;
             padding: 20px;
             text-align: center;
         }
@@ -54,13 +56,17 @@
             0% { transform: rotateX(0deg); }
             100% { transform: rotateX(-180deg); }
         }
+        @keyframes openEnvelope {
+            0% { transform: scaleY(0); }
+            100% { transform: scaleY(1); }
+        }
         .envelope.open .letter {
             opacity: 1;
         }
     </style>
 </head>
 <body>
-    <div class="envelope">
+    <div class="envelope open">
         <div class="flap"></div>
         <div class="letter">
             <h1>To My Love</h1>
@@ -71,7 +77,6 @@
     </div>
 
     <script>
-        // Add a class to the envelope to trigger the animation
         window.onload = function() {
             document.querySelector('.envelope').classList.add('open');
         };
