--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
         .envelope.open .letter {
             opacity: 1;
         }
+        .photos-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #d6336c;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .photos-button:hover {
+            background-color: #b02d5e;
+        }
     </style>
 </head>
 <body>
@@ -73,6 +86,7 @@
             <p>Dear [Girlfriend's Name],</p>
             <p>Your love letter goes here...</p>
             <p>Love, [Your Name]</p>
+            <button class="photos-button" onclick="window.location.href='photos.html'">View My Favorite Pictures</button>
         </div>
     </div>
 
