--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love Letter</title>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Dancing Script', cursive;
+            font-family: 'Times New Roman', serif;
             color: #333;
             margin: 0;
             padding: 0;
@@ -53,17 +52,19 @@
             padding: 40px;
             text-align: left;
             height: 100%;
-            font-size: 1.2em;
-            overflow: hidden; /* Hide scrollbar */
+            font-size: 1.1em;
             box-sizing: border-box;
+            overflow: hidden; /* Hide scrollbar */
+            white-space: pre-wrap; /* Preserve whitespace formatting */
+            line-height: 1.5;
         }
         .letter h1 {
             color: #d6336c;
             text-align: center;
-            font-size: 2em;
+            font-size: 1.8em;
         }
         .letter p {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         @keyframes openFlap {
             0% { transform: rotateX(0deg); }
@@ -143,3 +144,4 @@
     </script>
 </body>
 </html>
+
