--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Love Letter</title>
     <style>
         body {
-            font-family: 'Times New Roman', serif;
+            font-family: 'Bell MT', serif;
             color: #333;
             margin: 0;
             padding: 0;
@@ -26,7 +26,7 @@
         .envelope {
             position: relative;
             width: 800px;
-            height: 600px;
+            height: 700px; /* Increased height to fit more text */
             background: #fff;
             border: 2px solid #d6336c;
             border-radius: 10px;
@@ -56,15 +56,16 @@
             box-sizing: border-box;
             overflow: hidden; /* Hide scrollbar */
             white-space: pre-wrap; /* Preserve whitespace formatting */
-            line-height: 1.5;
+            line-height: 1.6; /* Adjust line height for better readability */
         }
         .letter h1 {
             color: #d6336c;
             text-align: center;
-            font-size: 1.8em;
+            font-size: 2em; /* Slightly larger heading */
+            margin-top: 0;
         }
         .letter p {
-            margin-bottom: 15px;
+            margin-bottom: 20px; /* Increased margin for better spacing */
         }
         @keyframes openFlap {
             0% { transform: rotateX(0deg); }
@@ -144,4 +145,5 @@
     </script>
 </body>
 </html>
+
 
