--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .envelope {
             position: relative;
             width: 800px;
-            height: 700px; /* Increased height to fit more text */
+            height: 700px; /* Increased height for the envelope */
             background: #fff;
             border: 2px solid #d6336c;
             border-radius: 10px;
@@ -54,7 +54,7 @@
             height: 100%;
             font-size: 1.1em;
             box-sizing: border-box;
-            overflow: hidden; /* Hide scrollbar */
+            overflow: auto; /* Enable scrollbar if content overflows */
             white-space: pre-wrap; /* Preserve whitespace formatting */
             line-height: 1.6; /* Adjust line height for better readability */
         }
@@ -125,7 +125,7 @@
         <div class="envelope open">
             <div class="flap"></div>
             <div class="letter">
-                <h1>To My Love</h1>
+                <h1>To My Pookienator</h1>
                 <p>Hey Linnie,</p>
                 <p>Today’s the 1st of August, meaning it’s National Girlfriend Day. And since the girl who’s reading this is my dear girlfriend, HAPPY NATIONAL GIRLFRIEND LINNIE. Sometimes I’m still shocked that you’re my girlfriend and then I contemplate how lucky I truly am. It’s already been 197 days since we officially became a couple, time really flies when I’m with you. It’s already the first day of August and Autumn is almost here, meaning we’ll finally be “Medium Long Distance”. Honestly, so excited about that. Just thinking about the fact that every week I can just come and visit you while living in Belgium, having unlimited sleepovers and being with you so much more makes me really happy. Such exciting times are coming up. Anyways, I’m getting a bit off the topic, this is a letter for an important day after all. I know you might think otherwise but, you’re such an amazing girlfriend, truly. Everything you do to me, every little thing, every day with you mean so much to me. Waking up to your good morning texts, sending you posts, talking with you about my day and silly interests, sending you pictures of what I do, being close to you, going on cute dates, eating delicious food together, listening to you talk about stuff you’re into, seeing you smile and talking about your feelings, and all the things we do together, have changed my life from something so monotonous to a life full of color. I genuinely can’t imagine my life without you. Now, I’m not trying to turn this into a depressing letter, but I just want to mention that I know I make mistakes (a lot) and that we have arguments sometimes, but I really want our relationship to work and I’m willing to put in the effort and change if anything is not working. Just never forget that. I love you the absolute most Bubu. I really hope we can be together forever!! I hope the website came along nicely, and that you like it. I also chose this song cause It’s probably my favorite one from the playlist you made me. (I love that playlist so fucking much). And yes, your cardd inspired me to do this too, sorry for stealing your idea :3.</p>
                 <p>I love you the most, my pretty girl.</p>
