--- a/photos.html
+++ b/photos.html
@@ -3,97 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love Letter</title>
+    <title>My Favorite Pictures</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            font-family: 'Bell MT', serif;
             color: #333;
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            height: 100vh;
-            background-image: url('background.jpg'); /* Add your background image here */
+            justify-content: center;
+            background-image: url('background.jpg'); /* Same background image */
             background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            min-height: 100vh;
         }
-        .envelope {
-            position: relative;
-            width: 300px;
-            height: 200px;
-            background: #fff;
-            border: 2px solid #d6336c;
+        .container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 20px;
+            width: 90%;
+            max-width: 1200px;
+        }
+        .picture {
+            border: 2px solid #d6336c; /* Pink border */
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transform-origin: top;
-            animation: openEnvelope 2s forwards;
         }
-        .flap {
-            position: absolute;
-            top: 0;
-            left: 0;
+        .picture img {
+            display: block;
             width: 100%;
-            height: 100%;
-            background: #fff;
-            transform-origin: top;
-            animation: openFlap 2s forwards 2s;
+            height: auto;
         }
-        .letter {
-            opacity: 0;
-            transition: opacity 2s 2s;
-            padding: 20px;
-            text-align: center;
-        }
-        .letter h1 {
-            color: #d6336c;
-        }
-        .letter p {
-            font-size: 1.2em;
-        }
-        @keyframes openFlap {
-            0% { transform: rotateX(0deg); }
-            100% { transform: rotateX(-180deg); }
-        }
-        @keyframes openEnvelope {
-            0% { transform: scaleY(0); }
-            100% { transform: scaleY(1); }
-        }
-        .envelope.open .letter {
-            opacity: 1;
-        }
-        .photos-button {
+        .back-button {
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: #d6336c;
+            font-size: 18px;
             color: #fff;
+            background-color: #d6336c;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 16px;
+            text-decoration: none;
+            text-align: center;
         }
-        .photos-button:hover {
+        .back-button:hover {
             background-color: #b02d5e;
         }
     </style>
 </head>
 <body>
-    <div class="envelope open">
-        <div class="flap"></div>
-        <div class="letter">
-            <h1>To My Love</h1>
-            <p>Dear [Girlfriend's Name],</p>
-            <p>Your love letter goes here...</p>
-            <p>Love, [Your Name]</p>
-            <button class="photos-button" onclick="window.location.href='photos.html'">View My Favorite Pictures</button>
-        </div>
+    <div class="container">
+        <!-- Add your 8 pictures here -->
+        <div class="picture"><img src="photo1.jpg" alt="Picture 1"></div>
+        <div class="picture"><img src="photo2.jpg" alt="Picture 2"></div>
+        <div class="picture"><img src="photo3.jpg" alt="Picture 3"></div>
+        <div class="picture"><img src="photo4.jpg" alt="Picture 4"></div>
+        <div class="picture"><img src="photo5.jpg" alt="Picture 5"></div>
+        <div class="picture"><img src="photo6.jpg" alt="Picture 6"></div>
+        <div class="picture"><img src="photo7.jpg" alt="Picture 7"></div>
+        <div class="picture"><img src="photo8.jpg" alt="Picture 8"></div>
     </div>
-
-    <script>
-        window.onload = function() {
-            document.querySelector('.envelope').classList.add('open');
-        };
-    </script>
+    <a class="back-button" href="index.html">Back to Love Letter</a>
 </body>
 </html>
