--- a/photos.html
+++ b/photos.html
@@ -68,6 +68,6 @@
         <div class="picture"><img src="photo7.jpg" alt="Picture 7"></div>
         <div class="picture"><img src="photo8.jpg" alt="Picture 8"></div>
     </div>
-    <a class="back-button" href="index.html">Back to Love Letter</a>
+    <a class="back-button" href="index.html">Back to Letter</a>
 </body>
 </html>
