--- a/index.html
+++ b/index.html
@@ -118,22 +118,17 @@
             position: relative;
             z-index: 1;
         }
-        .audio-player {
-            margin-top: 20px;
-            text-align: center;
-        }
         .spotify-player {
             margin-top: 20px;
             text-align: center;
             width: 100%;
-            max-width: 300px;
+            max-width: 800px; /* Adjust max-width as needed */
         }
         iframe {
+            border-radius: 12px;
             width: 100%;
-            height: 80px;
+            height: 152px;
             border: none;
-            overflow: hidden;
-            border-radius: 8px;
         }
     </style>
 </head>
@@ -154,8 +149,8 @@
             <span>&#10084;</span>
         </button>
         <div class="spotify-player">
-            <!-- Replace with your Spotify embed code -->
-            <iframe src="<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7qGnlI5MrFAs3OHU1E7Wpa?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <!-- Spotify Embed Code -->
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7qGnlI5MrFAs3OHU1E7Wpa?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </div>
 
@@ -166,6 +161,5 @@
     </script>
 </body>
 </html>
-
 
 
