--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
         }
         .container {
             text-align: center;
+            padding: 20px; /* Added padding for better spacing */
         }
         .envelope {
             position: relative;
             width: 800px;
-            height: 700px; /* Increased height for the envelope */
+            height: 600px; /* Adjusted height for the envelope */
             background: #fff;
             border: 2px solid #d6336c;
             border-radius: 10px;
@@ -122,12 +123,12 @@
             margin-top: 20px;
             text-align: center;
             width: 100%;
-            max-width: 800px; /* Adjust max-width as needed */
+            max-width: 500px; /* Adjusted max-width for better fit */
         }
         iframe {
             border-radius: 12px;
             width: 100%;
-            height: 152px;
+            height: 80px; /* Reduced height */
             border: none;
         }
     </style>
@@ -150,7 +151,7 @@
         </button>
         <div class="spotify-player">
             <!-- Spotify Embed Code -->
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7qGnlI5MrFAs3OHU1E7Wpa?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7qGnlI5MrFAs3OHU1E7Wpa?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </div>
 
@@ -161,5 +162,6 @@
     </script>
 </body>
 </html>
+
 
 
