--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
             text-align: center;
             width: 100%;
             max-width: 500px; /* Adjusted max-width for better fit */
+            display: flex;
+            justify-content: center; /* Center the player horizontally */
         }
         iframe {
             border-radius: 12px;
