--- a/index.html
+++ b/index.html
@@ -121,15 +121,14 @@
         }
         .spotify-player {
             margin-top: 20px;
-            text-align: center;
             width: 100%;
-            max-width: 500px; /* Adjusted max-width for better fit */
             display: flex;
             justify-content: center; /* Center the player horizontally */
         }
         iframe {
             border-radius: 12px;
             width: 100%;
+            max-width: 300px; /* Adjusted max-width for a smaller player */
             height: 80px; /* Reduced height */
             border: none;
         }
@@ -153,7 +152,7 @@
         </button>
         <div class="spotify-player">
             <!-- Spotify Embed Code -->
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7qGnlI5MrFAs3OHU1E7Wpa?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe src="https://open.spotify.com/embed/track/7qGnlI5MrFAs3OHU1E7Wpa?utm_source=generator&theme=0" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </div>
 
@@ -164,7 +163,6 @@
     </script>
 </body>
 </html>
-
 
 
 
