--- a/photos.html
+++ b/photos.html
@@ -54,9 +54,23 @@
         .back-button:hover {
             background-color: #b02d5e;
         }
+        .title {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 48px;
+            color: #d6336c;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 <body>
+    <div class="title">HAPPY NATIONAL GIRLFRIEND DAY <3</div>
     <div class="container">
         <!-- Add your 8 pictures here -->
         <div class="picture"><img src="photo1.jpg" alt="Picture 1"></div>
@@ -71,3 +85,4 @@
     <a class="back-button" href="index.html">Back to Letter</a>
 </body>
 </html>
+
