--- a/photos.html
+++ b/photos.html
@@ -6,7 +6,7 @@
     <title>My Favorite Pictures</title>
     <style>
         body {
-            font-family: 'Bell MT', serif;
+            font-family: 'Times New Roman', Times, serif;
             color: #333;
             margin: 0;
             padding: 0;
@@ -55,28 +55,25 @@
             background-color: #b02d5e;
         }
         .title {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 48px;
+            font-size: 36px;
             color: #d6336c;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
+            background-color: #fff;
+            padding: 10px 20px;
             border-radius: 10px;
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            grid-column: 1 / -1;
+            margin: 20px 0;
         }
     </style>
 </head>
 <body>
-    <div class="title">HAPPY NATIONAL GIRLFRIEND DAY <3</div>
     <div class="container">
-        <!-- Add your 8 pictures here -->
         <div class="picture"><img src="photo1.jpg" alt="Picture 1"></div>
         <div class="picture"><img src="photo2.jpg" alt="Picture 2"></div>
         <div class="picture"><img src="photo3.jpg" alt="Picture 3"></div>
         <div class="picture"><img src="photo4.jpg" alt="Picture 4"></div>
+        <div class="title">HAPPY NATIONAL GIRLFRIEND DAY</div>
         <div class="picture"><img src="photo5.jpg" alt="Picture 5"></div>
         <div class="picture"><img src="photo6.jpg" alt="Picture 6"></div>
         <div class="picture"><img src="photo7.jpg" alt="Picture 7"></div>
