--- a/photos.html
+++ b/photos.html
@@ -23,7 +23,7 @@
         .container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
+            gap: 10px; /* Reduced gap between pictures */
             padding: 20px;
             width: 90%;
             max-width: 1200px;
@@ -63,7 +63,7 @@
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             grid-column: 1 / -1;
-            margin: 20px 0;
+            margin: 10px 0; /* Reduced margin */
         }
     </style>
 </head>
@@ -73,7 +73,7 @@
         <div class="picture"><img src="photo2.jpg" alt="Picture 2"></div>
         <div class="picture"><img src="photo3.jpg" alt="Picture 3"></div>
         <div class="picture"><img src="photo4.jpg" alt="Picture 4"></div>
-        <div class="title">HAPPY NATIONAL GIRLFRIEND DAY</div>
+        <div class="title">HAPPY NATIONAL GIRLFRIEND DAY <3</div>
         <div class="picture"><img src="photo5.jpg" alt="Picture 5"></div>
         <div class="picture"><img src="photo6.jpg" alt="Picture 6"></div>
         <div class="picture"><img src="photo7.jpg" alt="Picture 7"></div>
@@ -82,4 +82,5 @@
     <a class="back-button" href="index.html">Back to Letter</a>
 </body>
 </html>
+
 
