--- a/photos.html
+++ b/photos.html
@@ -36,11 +36,16 @@
             position: relative;
             cursor: pointer;
             background-color: #fff;
+            height: 300px; /* Fixed height for pictures */
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .picture img {
             display: none;
             width: 100%;
-            height: auto;
+            height: 100%;
+            object-fit: cover;
         }
         .placeholder {
             width: 100%;
@@ -48,6 +53,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: #fff;
         }
         .heart-button {
             background-color: #d6336c;
